Fixed overflow issue and added text to the images in the image slider

--- a/index/style.css
+++ b/index/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 #wrapper {
-  overflow-x: hidden;
-  width: 100vw;
+  /* overflow-x: hidden; */
+  width: 100%;
 }
 
 .noshow {
@@ -45,7 +45,7 @@ header nav {
 }
 
 header nav #burger_menu {
-  margin: 7.5% 80%;
+  margin: 7.5% 0% 7.5% 80%;
   font-size: 30px;
 }
 
@@ -110,7 +110,7 @@ header nav #navigation-links i {
 }
 
 section {
-  width: 100vw;
+  width: 100%;
 }
 
 section .image-slider {
@@ -129,10 +129,13 @@ section .image-slider figure {
 
 section .image-slider figure img {
   max-width: 100%;
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
 .front {
-  opacity: 100;
+  opacity: 1;
 }
 .back {
   opacity: 0;
@@ -140,4 +143,24 @@ section .image-slider figure img {
 
 .front, .back {
   transition: opacity 1s;
+}
+
+section .image-slider .text {
+  text-align: center;
+  position: absolute;
+  top: 80vw;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+}
+
+section .image-slider .text h1 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 6vh;
+}
+
+section .image-slider .text h2 {
+  font-family: 'Open Sans', sans-serif;
+  margin-top: -5vh;
+  border-top: 2px solid black;
 }
